<resources>
    <string name="app_name">ProjectMidterm</string>
    <string name="name_brand"> Brand name</string>
    <string name="title_sub_view_add">ADD</string>
    <string name="title_btn_add">Add</string>
    <string name="title_btn_save">Save</string>
    <string name="title_btn_delete">delete</string>
    <string name="title_btn_cancel">cancel</string>
    <string name="name_divice">Divice name</string>
    <string name="price_divice">Divice price</string>
    <string name="storage_divice">Divice internal storage</string>
    <string name="aubout">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="title_btn_modify">Modify</string>
    <string name="detail">Detail</string>
    <string name="title_btn_update">update</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="warring_account">User name or password is incorrect. Please re-enter!</string>
    <string name="list_brand">List brand</string>
    <string name="list_divice">List divice</string>
    <string name="id_brand">ID</string>
    <string name="warring_delete_brand">Brand has some divice. Can\'t delete!!!</string>
    <string name="name">Name</string>
    <string name="image">Image</string>
    <string name="name_student">Student name: Thiều Hoàng Nhân</string>
    <string name="class_student">Class: D15-TH10</string>
    <string name="id_student">Student ID: DH51501245</string>
    <string name="Sai_Gon_Technology_University">Sai Gon Technology University</string>
</resources>
