<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.sub_divice"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sub_view_add"
        android:textAlignment="center"
        android:id="@+id/txt_title_divice"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/image_divice"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/name_divice"
        android:id="@+id/edt_name_divice"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/price_divice"
        android:id="@+id/edt_price_divice"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/storage_divice"
        android:id="@+id/edt_storage_divice"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveDivice"
            android:text="@string/title_btn_save"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeleteDivice"
            android:text="@string/title_btn_delete"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelDivice"
            android:text="@string/title_btn_cancel"/>
    </LinearLayout>

</LinearLayout>